# ARC-Evals

./: .gitignore  README.md  pyproject.toml
ARC_original_app/js/: testing_interface.js
arc_evals/agents/: base.py  claude_agent.py  test_agent.py
arc_evals/app/: app.py  llm_chat.py  task.py  testing.py
arc_evals/app/assets/: style.css  theme_colors.json
arc_evals/utils/: paths.py
evals/cheater/: 007bbfb7.json  00d62c1b.json  045e512c.json  0520fde7.json  05269061.json  05f2a901.json  06df4c85.json  08ed6ac7.json  09629e4f.json  0962bcdd.json  0a938d79.json  0b148d64.json  0ca9ddb6.json  0d3d703e.json  0dfd9992.json  0e206a2e.json  10fcaaa3.json  11852cab.json  1190e5a7.json  137eaa0f.json  150deff5.json  178fcbfb.json  1a07d186.json  1b2d62fb.json  1b60fb0c.json  1bfc4729.json  1c786137.json  1caeab9d.json  1cf80156.json  1e0a9b12.json  1e32b0e9.json  1f0c79e5.json  1f642eb9.json  1f85a75f.json  1f876c06.json  1fad071e.json  2013d3e2.json  2204b7a8.json  22168020.json  22233c11.json  (+354 more)
evals/claude/: 017c7c7b.json  025d127b.json  1f876c06.json  25ff71a9.json  264363fd.json  39e1d7f9.json  4258a5f9.json  44f52bb0.json  4c5c2cf0.json  50cb2852.json  5c0a986e.json  5c2c9af4.json  6773b310.json  6855a6e4.json  6cdd2623.json  6e19193c.json  77fdfe62.json  7837ac64.json  8731374e.json  890034e9.json  8e1813be.json  93b581b8.json  94f9d214.json  99b1bc43.json  a68b268e.json  a699fb00.json  b60334d2.json  b91ae062.json  c3e719e8.json  c8cbb738.json  d06dbe63.json  d2abd087.json  d5d6de2d.json  ecdecbb3.json  ed36ccf7.json  f8c80d96.json
evals/claude_update/: 23581191.json  25ff71a9.json  264363fd.json  28bf18c6.json  36d67576.json  39e1d7f9.json  4258a5f9.json  44f52bb0.json  4c5c2cf0.json  50cb2852.json  5c0a986e.json  5c2c9af4.json  6773b310.json  6855a6e4.json  6cdd2623.json  6e19193c.json  77fdfe62.json  8403a5d5.json  8731374e.json  99b1bc43.json  9f236235.json  a68b268e.json  b60334d2.json  bdad9b1f.json  c8cbb738.json  d06dbe63.json  d2abd087.json  d5d6de2d.json  ecdecbb3.json  ed36ccf7.json  f8c80d96.json  f9012d9b.json
